# libqwqngx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  qwqngx.cpp  qwqngx.h
